syntax = "proto3";

package tcpServ;
option go_package = "/tcpService";

service TcpService {

    rpc StartTcpServer(RequestForTcp) returns (ResponseFromTcp){};
}
message TcpConfig {
    int32 reqDelay = 1;
	int32 resDelay= 2;
	string	server = 3;
	string	client = 4;
}
message RequestForTcp {
    TcpConfig config = 1;
}

message ResponseFromTcp {
    string metric = 1;
}

